fix: mobile page overflow issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,11 +1,10 @@
 .app {
-  min-height: 100vh;
+  overflow: hidden;
 
   // sidebar
   .ant-layout-sider {
     overflow-y: auto;
-    min-height: 100vh;
-    height: 100vh;
+    background-color: #ffffff;
 
     @include responsive(sm) {
       position: fixed;
@@ -14,30 +13,19 @@
     }
   }
 
-  .sidebar__layout {
-    background-color: #ffffff;
-  }
-
-  // content
-  .ant-layout {
-    overflow-y: auto;
-    min-height: 100vh;
-    height: 100vh;
-  }
-
   .header__layout {
     padding: 0 0;
+    overflow-x: hidden;
     height: unset;
     line-height: unset;
-  }
-
-  .header__affix {
     z-index: 99;
+    background-color: #ffffff;
   }
 
   .content__layout {
     z-index: 10;
     overflow-x: hidden;
+    overflow-y: auto;
     display: flex;
     flex-direction: column;
 
@@ -48,9 +36,5 @@
     .footer {
       flex: 0 0 auto;
     }
-  }
-
-  .header__layout {
-    background-color: #ffffff;
   }
 }
