--- a/src/views/Home.scss
+++ b/src/views/Home.scss
@@ -1,11 +1,8 @@
 .home {
   position: relative;
-  min-height: $content-min-height;
-  height: 100%;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 50% 50%;
-
   display: flex;
   flex-direction: column;
   justify-content: center;
